Small fix to label alignment

--- a/Survey/source/styles/formal/_o-question-scale.scss
+++ b/Survey/source/styles/formal/_o-question-scale.scss
@@ -27,13 +27,13 @@
 }
 
 .has-terminators .o-label-container {
-    margin-left: 65px;
+    margin-left: 50px;
 }
 
 html[dir=rtl] {
     .has-terminators .o-label-container {
         margin-left: 0;
-        margin-right: 65px;
+        margin-right: 50px;
     }
 }
 
