--- a/Survey/styles/formal/base.css
+++ b/Survey/styles/formal/base.css
@@ -2433,12 +2433,12 @@ html[dir=rtl] .sidebyside .o-question-response + .o-question-response {
 }
 
 .has-terminators .o-label-container {
-  margin-left: 65px;
+  margin-left: 50px;
 }
 
 html[dir=rtl] .has-terminators .o-label-container {
   margin-left: 0;
-  margin-right: 65px;
+  margin-right: 50px;
 }
 
 .o-label-container {
